[package]
name = "zkexp"
version = "0.2.0"
description = "Enhanced Zero-Knowledge Proofs for Matrix Multiplication and Exponentiation with Comprehensive Metrics"
edition = "2021"
authors = ["zkExp Team"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/zkexp-team/enhanced-zkmap-zkexp"
keywords = ["zero-knowledge", "cryptography", "matrix-multiplication", "exponentiation", "benchmarks"]
categories = ["cryptography", "mathematics", "science"]

[dependencies]
# Core cryptographic libraries
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-std = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.2"
rand = "0.8.5"
rayon = "1.8.0"
sha2 = "0.10.7"
num_cpus = "1.16.0"

# Core utilities
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.26", features = ["serde"] }
csv = "1.2.2"

# === OPTIONAL: Baseline Comparison Dependencies ===

# Schnorr/Ed25519 signatures
curve25519-dalek = { version = "4.1", optional = true }
ed25519-dalek = { version = "2.1", optional = true }

# BLS signatures and pairings
bls12_381 = { version = "0.8", optional = true }
group = { version = "0.13", optional = true }
ff = { version = "0.13", optional = true }
pairing = { version = "0.23", optional = true }

# Groth16 SNARK (arkworks ecosystem)
ark-groth16 = { version = "0.4.0", optional = true }
ark-relations = { version = "0.4.0", optional = true }
ark-r1cs-std = { version = "0.4.0", optional = true }
ark-crypto-primitives = { version = "0.4.0", optional = true }

# Additional cryptographic schemes
ark-secp256k1 = { version = "0.4.0", optional = true }
ark-bn254 = { version = "0.4.0", optional = true }
k256 = { version = "0.13", optional = true }
ecdsa = { version = "0.16", optional = true }
rsa = { version = "0.9", optional = true }

# Bulletproofs
bulletproofs = { version = "4.0", optional = true }
curve25519-dalek-ng = { version = "4.1", optional = true }

# Additional hash functions
blake2 = { version = "0.10", optional = true }
blake3 = { version = "1.5", optional = true }

# Optional utilities
plotters = { version = "0.3.5", optional = true }
criterion = { version = "0.5", optional = true }

# Performance monitoring
perf-event = { version = "0.4", optional = true }
mimalloc = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
tempfile = "3.0"
hex = "0.4"
anyhow = "1.0"

[features]
default = []

# Core features
plotting = ["plotters"]
benchmarking = ["criterion"]

# Baseline comparison features
schnorr-baseline = ["ed25519-dalek", "curve25519-dalek"]
bls-baseline = ["bls12_381", "group", "ff", "pairing"]
groth16-baseline = ["ark-groth16", "ark-relations", "ark-r1cs-std", "ark-crypto-primitives"]
ecdsa-baseline = ["k256", "ecdsa", "ark-secp256k1"]
rsa-baseline = ["rsa"]
bulletproofs-baseline = ["bulletproofs", "curve25519-dalek-ng"]

# Hash function features
extra-hashes = ["blake2", "blake3"]

# Convenience feature sets
all-baselines = [
    "schnorr-baseline", 
    "bls-baseline", 
    "groth16-baseline", 
    "ecdsa-baseline", 
    "rsa-baseline"
]

# Performance features
perf-monitoring = ["perf-event"]
fast-allocator = ["mimalloc"]

# Complete feature set
full = [
    "plotting", 
    "benchmarking", 
    "all-baselines", 
    "perf-monitoring",
    "fast-allocator",
    "extra-hashes"
]

# Profile optimizations
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
overflow-checks = false

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = "thin"
debug-assertions = false
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
panic = "unwind"

[profile.test]
opt-level = 2
debug = true
overflow-checks = true

# === Binary Target ===

[[bin]]
name = "enhanced_zkproofs"
path = "src/main.rs"

# === Benchmark Targets ===

[[bench]]
name = "zkexp_benchmarks"
path = "benches/zkexp_bench.rs"
harness = false
required-features = ["benchmarking"]

[[bench]]
name = "zkmap_benchmarks" 
path = "benches/zkmap_bench.rs"
harness = false
required-features = ["benchmarking"]

[[bench]]
name = "baseline_comparison_bench"
path = "benches/baseline_bench.rs"
harness = false
required-features = ["benchmarking", "all-baselines"]

# === Example Targets ===

[[example]]
name = "quick_demo"
path = "examples/quick_demo.rs"

[[example]]
name = "comparison_demo"
path = "examples/comparison_demo.rs"
required-features = ["all-baselines"]

[[example]]
name = "schnorr_vs_zkexp"
path = "examples/schnorr_comparison.rs"
required-features = ["schnorr-baseline"]

[[example]]
name = "bls_vs_zkexp"
path = "examples/bls_comparison.rs"
required-features = ["bls-baseline"]

[[example]]
name = "groth16_vs_zkexp"
path = "examples/groth16_comparison.rs"
required-features = ["groth16-baseline"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
